Troisième commit: l'app se lance maintenant et affiche un message

--- a/build.gradle
+++ b/build.gradle
@@ -15,3 +15,8 @@ dependencies {
     compile project(':commun')
     compile project(':commun_javafx')
 }
+
+task(joueur01, dependsOn: 'classes', type: JavaExec) {
+   main = 'JosserCombat.Principal'
+   classpath = sourceSets.main.runtimeClasspath
+}
