fixed multiple problems and made menu working

--- a/build.gradle
+++ b/build.gradle
@@ -19,4 +19,11 @@ dependencies {
 task(joueur01, dependsOn: 'classes', type: JavaExec) {
    main = 'JosserCombat.Principal'
    classpath = sourceSets.main.runtimeClasspath
+      jvmArgs('-Duser.language=fr')
+}
+
+task(joueur01En, dependsOn: 'classes', type: JavaExec) {
+   main = 'JosserCombat.Principal'
+   classpath = sourceSets.main.runtimeClasspath
+   jvmArgs('-Duser.language=en')
 }
