--- a/src/main/resources/traductions/chaines.properties
+++ b/src/main/resources/traductions/chaines.properties
@@ -1,3 +1,9 @@
-# PartieLocale
-joueurUn=Joueur Un
-joueurDeux=Joueur Deux
+# Parametres
+lang=Langue
+fr=Francais
+eng=Anglais
+sonOn=Son ON
+sonOff=Son OFF
+confirmation=Confirmer
+annulation=Annuler
+intensite=Intensité   
