--- a/build.gradle
+++ b/build.gradle
@@ -14,16 +14,17 @@ dependencies {
 
     compile project(':commun')
     compile project(':commun_javafx')
+    compile project(':commun_client')
 }
 
 task(joueur01, dependsOn: 'classes', type: JavaExec) {
-   main = 'JosserCombat.Principal'
+   main = 'josser_combat_javafx.Principal'
    classpath = sourceSets.main.runtimeClasspath
       jvmArgs('-Duser.language=fr')
 }
 
 task(joueur01En, dependsOn: 'classes', type: JavaExec) {
-   main = 'JosserCombat.Principal'
+   main = 'josser_combat_javafx.Principal'
    classpath = sourceSets.main.runtimeClasspath
    jvmArgs('-Duser.language=en')
 }
