--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,6 @@ project(':commun').projectDir = file('../tutoriels_java/commun')
 
 include ':commun_javafx'
 project(':commun_javafx').projectDir = file('../tutoriels_java/commun_javafx')
+
+include ':commun_client'
+project(':commun_client').projectDir = file('../tutoriels_java/commun_client')
