--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'JosserCombat'
+rootProject.name = 'JosserCombat_prof'
 
 include ':commun'
 project(':commun').projectDir = file('../tutoriels_java/commun')
