--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,24 @@
+import org.gradle.plugins.ide.eclipse.model.AccessRule
+
 plugins {
+    id 'java'
+    id 'eclipse'
+}
 
-    id 'java-library'
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
+eclipse {
+    classpath {
+        file {
+            whenMerged {
+                def jre = entries.find { it.path.contains 'org.eclipse.jdt.launching.JRE_CONTAINER' }
+                jre.accessRules.add(new AccessRule('0', 'javafx/**'))
+            }
+        }
+    }
 }
 
 repositories {
