--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,10 @@
-rootProject.name = 'JosserCombat_prof'
+rootProject.name = 'JosserCombat'
+
+include ':commun'
+project(':commun').projectDir = file('../tutoriels_java/commun')
+
+include ':commun_javafx'
+project(':commun_javafx').projectDir = file('../tutoriels_java/commun_javafx')
+
+include ':commun_client'
+project(':commun_client').projectDir = file('../tutoriels_java/commun_client')
