Comme ça fonctionne finalement, je reviens à la version avec dépendances

--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,9 @@ repositories {
 
 dependencies {
 
-
+    compile project(':commun')
+    compile project(':commun_javafx')
+    compile project(':commun_client')
 }
 
 task(joueur01, dependsOn: 'classes', type: JavaExec) {
