--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,6 @@ project(':commun_javafx').projectDir = file('../tutoriels_java/commun_javafx')
 
 include ':commun_client'
 project(':commun_client').projectDir = file('../tutoriels_java/commun_client')
+
+include ':commun_serveur'
+project(':commun_serveur').projectDir = file('../tutoriels_java/commun_serveur')
